# rrr

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: app.rs  csv_dump.rs  db.rs  json.rs  main.rs  plot_helper.rs
src/utils/: compression.rs  mod.rs
