[package]
name = "rrr"
version = "0.5.5"
authors = ["Gokberk Kocak <gk34@st-andrews.ac.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33"
num = "0.4"
csv = "1.1"
mysql_async = "0.28"
tokio = {version = "1.5", features = ["rt-multi-thread"] }
zstd = "0.9"